fix: reduce hero padding-top on mobile from 190px to 120px

--- a/style.css
+++ b/style.css
@@ -1367,7 +1367,7 @@ a {
   }
 
   .hero__box {
-    padding-top: 190px;
+    padding-top: 120px;
     padding-bottom: 60px;
     flex-direction: column;
     justify-content: flex-start;
